# RL2025HW02

./: README.md
kdl_interfaces/: CMakeLists.txt  package.xml
kdl_interfaces/action/: Trajectory.action
plot/: db3TOcsv_position.py  db3TOcsv_velocity.py
plot/bag_velocity_position/: bag_velocity_position_0.db3  metadata.yaml
plot/bag_velocity_position_null/: bag_velocity_position_null_0.db3  metadata.yaml
plot/bag_velocity_velocity/: bag_velocity_velocity_0.db3  metadata.yaml
plot/bag_velocity_velocity_null/: bag_velocity_velocity_null_0.db3  metadata.yaml
plot/compare_position/: graph_position.py  joint_states_converted1.csv  joint_states_converted2.csv
plot/compare_velocity/: graph_velocity.py  velocity_commands_converted1.csv  velocity_commands_converted2.csv
plot/vision_control_velocity_cmd/: metadata.yaml  velocity_commands_converted.csv  vision_control_velocity_cmd_0.db3  vision_velocity_plot.py
ros2_iiwa/iiwa_description/config/: iiwa.config.xacro  initial_positions.yaml
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: aruco_world.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/config/: parameters.yaml
ros2_kdl_package/include/: kdl_control.h  kdl_planner.h  kdl_robot.h  utils.h
ros2_kdl_package/launch/: iiwa.client.launch.py  iiwa.control.launch.py  iiwa_world_vision.launch.py
ros2_kdl_package/src/: kdl_action_client.cpp  kdl_action_server.cpp  kdl_control.cpp  kdl_planner.cpp  kdl_robot.cpp  ros2_kdl_node.cpp  ros2_kdl_node_vision.cpp
